# psx-research-agent

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  cleanup-all-orphaned.sh  package-lock.json  pyproject.toml  routes.py  state_monitor.py  test_indu_baseline.py  utils.py
.github/workflows/: deploy.yml
docs/: analytics-options.md  analytics-performance.md  analytics-tracking.md  deployment.md  session-tracking.md  token-usage-tracking.md
financial/: __init__.py  analyzers.py  multimodal_pdf_extractor.py  pdf_extractor.py  pdfplumber_extractor.py  pdfplumber_ocr_extractor.py
financial/config/: cost_calculator.py  model_config.py  user_profile_loader.py
financial/langgraph/: __init__.py  analyzer.py  api_client.py  decision_llm_helper.py  json_parser.py  llm_helper.py  prompt_manager.py  state.py  state_manager.py
financial/prompts/: decision_prompt.md  investor_analysis_prompt.md  investor_extraction_prompt.md
financial/repositories/: file_result_repository.py
financial/services/: __init__.py  financial_service.py  financial_statement_analyzer.py  index_membership_service.py  pdf_download_service.py  stock_page_service.py
models/: __init__.py  base.py  financial_data.py  stock_analysis.py
routes/: __init__.py  decision.py  financial.py  helpers.py  technical.py
static/: app.js  tailwind.css
technical/: __init__.py  analyzer.py  confidence_calculator.py  price_repository.py  recommendation_engine.py
technical/indicators/: obv_calculator.py  (+5 more)
templates/: index.html
tests/: __init__.py  test_stock_page_service.py
(+17 files in other folders)
