[project]
name = "psx-research-agent"
version = "1.0.0"
description = "PSX Stock Analysis: Technical and Financial Analysis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=1.5.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=2.15.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["technical", "technical.indicators", "technical.recommendation", "financial", "financial.config", "financial.langgraph", "financial.langgraph.api", "financial.langgraph.utils", "financial.langgraph.workflow_steps", "financial.repositories", "financial.services", "financial.validators", "models", "routes"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.html", "*.js", "*.css"]
